# agentic-neural-network

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  ATTRIBUTIONS.md  CHANGELOG.md  CICD_SETUP.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  INTEGRATIONS.md  LICENSE  LIMITATIONS.md  PRODUCTION_READINESS.md  PUBLIC_RELEASE_EXCLUSIONS.md  PUBLIC_RELEASE_MANIFEST.json  README.md  README_LOCAL_MODEL_BACKENDS.md  ROADMAP.md  SECURITY.md  STRIPE_SETUP.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.ps1  start.ps1  stop.ps1  update.ps1
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: deploy-template.yml  docker-build.yml  lint.yml  security-scan.yml  test.yml
agentic_network/: __init__.py  config.py
agentic_network/action_planner_agent/: __init__.py  run.py  runtime.py
agentic_network/agents/: __init__.py  architect_agent.py  base_agent.py  code_agent.py  final_reviewer_agent.py  fixer_agent.py  product_agent.py  reviewer_agent.py  security_agent.py  test_engineer_agent.py
agentic_network/architect_agent/: __init__.py  prompt.md  run.py  runtime.py
agentic_network/architecture_entropy/: __init__.py  runtime.py
agentic_network/autonomous_loop/: __init__.py  run.py  runtime.py
agentic_network/code_agent/: __init__.py  prompt.md  run.py  runtime.py
agentic_network/consensus_agent/: __init__.py  run.py  runtime.py
agentic_network/context_agent/: __init__.py  run.py  runtime.py
config/: ann_model_inventory.json  ann_model_policy.json  ann_model_routing.json  ann_runtime_bundle.json  ann_runtime_engine.json  ann_runtime_lock.example.json  ann_runtime_requirements.windows-cp311.txt  ann_skill_permissions.json  ann_skills.json  ann_terminal_conversation_runtime.json  public-release.json
dataset_curation/: common.py  discover_sources.py  download_sources.py  export_candidates.py  generate_ears_synthetic.py  normalize_sources.py  score_candidates.py
dataset_generation/: __init__.py  export_product_jsonl.py  generate_product_dataset.py  generate_tasks.py  review_product_dataset.py
docker/: api.Dockerfile  api.gpu.Dockerfile  web.Dockerfile
docs/: AGENT_OFFICE_VISUALIZER.md  ANN_CONTEXT_MANAGEMENT.md  ANN_CONVERSATIONAL_CHAT.md  ANN_CONVERSATION_ORCHESTRATOR.md  ANN_INTENT_CONTRACT.md  ANN_MODEL_LIFECYCLE.md  ANN_PIPELINE_ROUTING.md  ANN_TERMINAL_CONVERSATION_MODE.md  DEPENDENCY_SECURITY.md  DEPLOYMENT.md  DEVELOPMENT_PROCESS.md  PRODUCT_AGENT_DATASET.md  PUBLIC_RELEASE.md  SECURITY_REVIEW.md  STORAGE.md  TEST_RESULTS.md  architect_agent_integration.md  product_agent_integration.md
installer/: ANN_Setup.bat  ANN_Uninstall.bat  AnnPowerShellLauncher.cs  AnnSetupLauncher.cs  AnnUninstallLauncher.cs  README_INSTALLER.md  ann_launcher.ps1  create_shortcut.ps1  install_ann.ps1  sign_release.ps1  uninstall_ann.ps1  validate_clean_machine.ps1  verify_install.ps1
scripts/: run_agentic_pipeline.py
(+605 files in other folders)
